5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2563.log
== TEST (2019-06-06 10:37:29) 
-- CODE:
from numpy import *

vet = array(eval(input("Medias: ")))

for i in range(vet):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:38:16) 
-- CODE:
from numpy import *

v = array(eval(input("Medias: ")))

for i in range(v):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:38:32) 
-- CODE:
from numpy import *

v = array(eval(input("Medias: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:46:14) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
for n in range(size(vet)):
	if(n>=5 and n<7):
		n = n + 1
		print(size(vet))
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:46:34) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
for n in range(size(v)):
	if(n>=5 and n<7):
		n = n + 1
		print(size(v))
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:48:37) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
for n in range(size(v)):
	if(n>=5 and n<7 and size(v)=!1):
		n = n + 1
		print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 6
    if(n>=5 and n<7 and size(v)=!1):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:49:08) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
for n in range(size(v)):
	if(size(v)=!1):
	if(n>=5 and n<7):
		n = n + 1
		print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 6
    if(size(v)=!1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:49:56) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0

for n in range(size(v)):
	if(size(v)=!1):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 7
    if(size(v)=!1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:49:58) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0

for n in range(size(v)):
	if(size(v)=!1):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 7
    if(size(v)=!1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:49:58) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0

for n in range(size(v)):
	if(size(v)=!1):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- EXECUTION TIME:
0.639565
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 7
    if(size(v)=!1):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:05) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0

for n in range(size(v)):
	if(size(v)=!1):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 7
    if(size(v)=!1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:29) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
x= size(v)
for n in range(size(v)):
	if(x=!1):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 7
    if(x=!1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:14) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
while(size(v)!=1):
	for n in range(size(v)):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:27) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
while(size(v)!=1):
	for n in range(size(v)):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:38) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
while(size(v)!=1):
	for n in range(size(v)):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:50) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
n=0
while(size(v)!=1):
	for n in range(size(v)):
		if(n>=5 and n<7):
			n = n + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:36) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
			print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:53) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
File "XXXX", line 12
    v = array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:59) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
	print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:02) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
	print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:49) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
	print(i)
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:59) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
		print(i)
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:24) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
		print(size(i))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:33) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(i>=5 and i<7):
			i = i + 1
		print(size(v))
	
		
	v = array(eval(input("Medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:51) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))
i=0
while(size(v)>1):
	nmonitor = 0
	
	for i in v:
		if(i>=5 and i<7):
			nmonitor = nmonitor + 1
	print(nmonitor)
	
		
	v = array(eval(input("Medias finais: ")))
	


-- EXECUTION TIME:
0.884951
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:48:19) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))
for i in nota:
	nota = nota + 1
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:50:39) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if nota[i]>=5:
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:51:08) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if (nota[i] >= 5):
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:51:28) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if (nota[i] == 5):
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:51:50) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if (siz(nota) >= 5):
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:52:01) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if (size(nota) >= 5):
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:52:48) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

for i in nota:
	if (nota >= 5):
		print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:55:44) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

while(size(nota)>1):
	j=0
	for i in nota:
		if(i>=5 and i<7):
			j = j +1
print(j)
		nota = array(eval(input("Medias finais: ")))
	
-- ERROR:
File "XXXX", line 11
    nota = array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:55:52) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

while(size(nota)>1):
	j=0
	for i in nota:
		if(i>=5 and i<7):
			j = j +1
print(j)
	nota = array(eval(input("Medias finais: ")))
	
-- ERROR:
File "XXXX", line 11
    nota = array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:56:01) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

while(size(nota)>1):
	j=0
	for i in nota:
		if(i>=5 and i<7):
			j = j +1
print(j)
nota = array(eval(input("Medias finais: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:56:37) 
-- CODE:
from numpy import*

nota = array(eval(input("Medias finais: ")))

while(size(nota)>1):
	j=0
	for i in nota:
		if(i>=5 and i<7):
			j = j +1
print(j)
	nota = array(eval(input("Medias finais: ")))
	
-- ERROR:
File "XXXX", line 11
    nota = array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:57:38) 
-- CODE:


	
	
from numpy import *

v = array(eval(input("Medias finais: ")))

while(size(v)>1):
	nmonitor = 0
	
	for i in v:
		if(i>=5 and i<7):
			nmonitor = nmonitor + 1
	print(nmonitor)
	
		
	v = array(eval(input("Medias finais: ")))
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:57:45) 
-- CODE:


	
	
from numpy import *

v = array(eval(input("Medias finais: ")))

while(size(v)>1):
	nmonitor = 0
	
	for i in v:
		if(i>=5 and i<7):
			nmonitor = nmonitor + 1
	print(nmonitor)
	
		
	v = array(eval(input("Medias finais: ")))
	

	
-- EXECUTION TIME:
1.3375
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:58:42) 
-- CODE:
from numpy import *

v = array(eval(input("Medias finais: ")))

while(size(v)>1):
	nmonitor = 0
	
	for i in v:
		if(i>=5 and i<7):
			nmonitor = nmonitor + 1
	print(nmonitor)
	
		
	v = array(eval(input("Medias finais: ")))
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
